button-a hoverin elave olunmasi

--- a/register.html
+++ b/register.html
@@ -37,8 +37,10 @@
                         <input type="password" placeholder="Password" id="userPassword" required>
                         <a href="#" id="showPassword"><i class="fas fa-eye"></i></a>
                     </div>
-                    <input type="button" value="Signup" class="btn" id="register">
-                    <a href="login.html" class="btn">Login</a>
+                    <div class="button-panel">
+                        <input type="button" value="Signup" class="btn" id="register">
+                        <a href="login.html" class="btn">Login</a>
+                    </div>
                 </form>
             </div>
         </div>
