--- a/login.html
+++ b/login.html
@@ -27,8 +27,10 @@
                         <input type="password" placeholder="Password" id="password" required>
                         <a href="#" id="showPass"><i class="fas fa-eye"></i></a>
                     </div>
-                    <input type="button" value="Login" class="btn" id="login">
-                    <a href="register.html" class="btn">Register</a>
+                    <div class="button-panel">
+                        <input type="button" value="Login" class="btn" id="login">
+                        <a href="register.html" class="btn">Register</a>
+                    </div>
                 </form>
             </div>
         </div>
