--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/48dfdf8efd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
@@ -228,6 +229,11 @@
             </div>
         </section>
     </footer>
+    <script>
+        $(document).on("click",".list-group-item",function(){
+            $(this).addClass("active").siblings().removeClass("active");
+        })
+    </script>
     <script src="js/cardBox.js"></script>
     <script src="js/cardManager.js"></script>
     <script src="js/app.js"></script>
