Yeni javascript faylinin yaranmasi

--- a/index.html
+++ b/index.html
@@ -229,11 +229,7 @@
             </div>
         </section>
     </footer>
-    <script>
-        $(document).on("click",".list-group-item",function(){
-            $(this).addClass("active").siblings().removeClass("active");
-        })
-    </script>
+    <script src="js/list.js"></script>
     <script src="js/cardBox.js"></script>
     <script src="js/cardManager.js"></script>
     <script src="js/app.js"></script>
