--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <img src="images/South Pointe off white.png" alt="logo">
                 </div>
                 <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item">
+                    <li class="list-group-item active">
                         <a href="#" class="nav-link">Home</a>
                     </li>
                     <li class="list-group-item">
